--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -1,1 +1,18 @@
-<h2>all recipes</h2>
+<h1>All Recipes</h1>
+<div>
+  <%= link_to "New Recipe", new_recipe_path %>
+</div>
+<div class="recipes">
+  <% @recipes.each do |recipe| %>
+    <div class="recipe">
+      <h3><%= link_to recipe.name, recipe_path(recipe) %></h3>
+      <p><%= recipe.description %></p>
+      <ul class="recipe-actions">
+        <li><%= link_to "Edit", edit_recipe_path(recipe) %></li>
+        <li><%= link_to "Delete", recipe_path(recipe), data: {
+          confirm: "you wanna delete #{recipe.name}?!",
+        }, method: :delete %></li>
+      </ul>
+    </div>
+  <% end %>
+</div>
