--- a/app/views/meal_plans/_form.html.erb
+++ b/app/views/meal_plans/_form.html.erb
@@ -1,5 +1,5 @@
 <%= render partial: "shared/errors" %>
-<%= form_for @meal_plan do |form| %>
+<%= form_for @meal_plan, html: { class: "form-horizontal" } do |form| %>
   <%= form.hidden_field :start_date %>
   <%= form.hidden_field :end_date %>
   <div class="meals">
@@ -13,7 +13,9 @@
       </div>
     <% end %>
   </div>
-  <div class="actions">
-    <%= form.submit %>
+  <div class="form-group">
+    <div class="col-sm-11 col-sm-offset-1">
+      <%= form.submit class: "btn btn-primary" %>
+    </div>
   </div>
 <% end %>
