--- a/app/views/meal_plans/edit.html.erb
+++ b/app/views/meal_plans/edit.html.erb
@@ -1,2 +1,4 @@
-<h1>Edit Meal Plan: <%= @meal_plan %></h1>
+<div class="title-container">
+  <h1>Edit Meal Plan: <%= @meal_plan %></h1>
+</div>
 <%= render partial: "form" %>
